--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,10 +79,12 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
+section {
+    margin-top: 130px;
+}
 
 /* about section styles */
 .about {
-    margin-top: 130px;
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -93,7 +95,8 @@ main {
     font-weight: 700;
     font-size: 35px;
     color: #181818;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
 .section-description {
@@ -116,4 +119,59 @@ main {
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+/* what i do section styles */
+.what-i-do {
+    padding: 130px 150px;
+}
+
+.skill {
+    padding: 30px;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    color: #181818;
+}
+
+.skill-description {
+    font-size: 16px;
+    color: #757575;
+}
+
+/* resume styles */
+.resume-content{
+    display: flex;
+}
+.resume-title {
+    font-weight: 700;
+font-size: 30px;
+color: #474747;
+}
+.resume-item .title {
+    font-weight: 700;
+font-size: 25px;
+color: #474747;
+}
+
+.resume-item .sub-title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+}
+
+.resume-item .description {
+    color: #757575;
 }
