--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,7 +15,19 @@
     font-weight: 700;
     font-size: 20px;
     border: 0;
-    padding: 18px 35px;
+    padding: 18px 30px;
+}
+
+.btn-secondary {
+    background: #FFF8F3;
+    border-radius: 5px;
+    Height: 64px;
+    color: #FD6E0A;
+    font-weight: 700;
+    font-size: 20px;
+    border: 1px solid #FD6E0A;;
+    padding: 18px 30px;
+    margin-left: 30px;
 }
 
 .header {
@@ -50,6 +62,16 @@ nav li {
 .nav-title {
     font-weight: 800;
     font-size: 45px;
+}
+
+.btn-nav {
+    background: #FD6E0A;
+    border-radius: 5px;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 20px;
+    border: 0;
+    padding: 12px 25px;
 }
 
 /* banner styles */
@@ -245,7 +267,7 @@ a {
     margin-right: 20px;
 }
 
-input, textarea {
+.form-style, textarea {
     display: block;
     width: 100%;
     margin-bottom: 24px;
